--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -731,7 +731,7 @@
         }
 
             #main .avatar img {
-                display: block;
+                display: inline-block;
                 margin: 0 auto;
                 border-radius: 100%;
                 box-shadow: 0 0 0 1.5em #ffffff;
@@ -832,6 +832,7 @@
         min-height: 100%;
         padding: 1.5em;
         z-index: 2;
+        
     }
 
         #wrapper > * {
