--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -827,7 +827,7 @@
         -moz-perspective: 1000px;
         -webkit-perspective: 1000px;
         -ms-perspective: 1000px;
-        perspective: 1000px;
+        perspective: 100px;
         position: relative;
         min-height: 100%;
         padding: 1.5em;
@@ -841,7 +841,7 @@
 
         #wrapper:before {
             content: '';
-            display: block;
+            display: flex;
         }
 
         @media screen and (max-width: 360px) {
